# rust-api

./: Cargo.toml  feedback.txt
.sqlx/: query-6af3348fc1e55d2924cd069fe3cd88109137b93d1e8282f1a5ff3886fdb24f97.json  query-8b60251f82ca2b4ce294964b5b436b9149da599f6e2e9b86588e936e11703498.json  query-fbc770c1768a56d06b93767fb63ff4c3cb9c7ed637bf05837f3287c7f286d219.json
migrations/: 20240316014915_create_users_table.sql  20240316021836_add_gender_to_users.sql
src/: error.rs  lib.rs  main.rs
src/config/: config.rs  db.rs  mod.rs  vars.rs
src/controllers/user/: create_user.rs  get_user.rs
src/database/: user.rs
src/middleware/: auth.rs
src/middleware/auth/: mod.rs
src/routes/: user.rs
src/services/user/: create_user.rs  get_user.rs
src/types/: user.rs
src/utils/error/: mod.rs
src/utils/logging/: mod.rs
