[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-subscriber = "0.3"
hyper = "1.2.0"
tower = "0.4.13"
axum = "0.7.4"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
] }
serde = "1.0.197"
serde_json = "1.0.114"
dotenv = "0.15.0"
tracing = "0.1.40"
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["full"] }
