[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
clap = { version = "4.5.3", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
